@@ -1,3 +1,8 @@
+2012-10-15  Doug Evans  <dje@google.com>
+
+	* gdb.texinfo (Mode Options): Document -nh.
+	Elaborate on docs for -nx.
+
 2012-09-26  Siddhesh Poyarekar  <siddhesh@redhat.com>
 
 	* observer.texi (memory_changed): Expand parameter LEN to ssize_t.
